Have finished the lab02